# assort

./: .gitignore  README.md  pyproject.toml
assort/: __init__.py  core.py
