[project]
name = "assort"
version = "2.0.0"
description = "Using AI to sort lists of unstructured text through iterative batches."
readme = "README.md"
dependencies = [
    "genai-prices>=0.0.50",
    "langchain>=0.3.27,<2.0.0",
    "langchain-openai>=0.3.35,<2.0.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.65.0"
]
requires-python = ">=3.9"
authors = [{ name = "Tom Gorbett", email = "wthomasgorbett@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
